# model_evaluation_vertex_2025

./: 00_TRAIN_pandas_sklearn_custom_container.ipynb  01_Versioning_and_Evaluations_with_Vertex.ipynb  02_Generate_GCS_training_data.ipynb  03_custom_training_container_and_model_registry.ipynb  04_bp_pipelines_reservations.ipynb  README.md  Untitled-1.ipynb  data.json  predict_w_reservations.json  pyproject.toml  request.json  sample_image.csv  spark_batch_predict.py
custom_training/: Dockerfile
custom_training/trainer/: task.py
src/: handler.py  predictor.py  requirements.txt
