[tool.poetry]
name = "model-evaluation-vertex"
version = "0.1.0"
description = ""
authors = ["Jeremy Wortz <jwortz@google.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
kfp = "^2.13.0"
google-cloud-pipeline-components = "^2.20.0"
google-cloud-aiplatform = "1.95.1"
tensorflow-datasets = "^4.9.8"
tensorflow = "^2.19.0"
google-auth-oauthlib = "^1.2.2"
argparse = "^1.4.0"
dataproc-spark-connect = "^0.7.5"
pandas = "^2.2.3"
google-cloud-dataproc = "^5.18.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
